# AI_Cultural_Mediator

./: .env.example  .gitignore  README.md
.specify/memory/: constitution.md
backend/: prepare_comprehensive_idioms.py  prepare_idiom_data.py  prepare_training_data.py  pyproject.toml  requirements.txt  train_idioms.py  train_translation.py  visualize_training.py
backend/adapters/translation/: adapter_config.json
backend/adapters/translation_v2/: adapter_config.json
backend/comprehensive_idiom_data/: categories.json  train.jsonl
backend/src/: config.py  main.py
backend/src/agents/: lora.py  router.py
backend/src/api/: events.py
backend/src/audio/: asr.py  streaming_asr.py
backend/src/services/: exa.py  insight.py  translator.py  whisper.py  whisper_local.py
backend/training_data_dir/: train.jsonl  valid.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx
frontend/src/components/: AudioCapture.tsx  InsightCard.tsx  SidePanel.tsx  StatusIndicator.tsx  TextInputTest.tsx  TranscriptView.tsx
frontend/src/hooks/: useAudio.ts  useModelStatus.ts  useSocket.ts  useWhisperRecorder.ts
frontend/src/lib/: vad.ts
frontend/src/store/: useAppStore.ts
specs/001-core-experience/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-experience/checklists/: requirements.md
specs/001-core-experience/contracts/: async-api.md
