[project]
name = "backend"
version = "0.1.0"
description = "Local AI Cultural Mediator Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "python-socketio>=5.11.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
